--- a/src/index.css
+++ b/src/index.css
@@ -165,7 +165,7 @@ nav button:hover {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
+  color: rgb(140, 123, 123);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -180,7 +180,7 @@ nav button:hover {
 
 .prev:hover,
 .next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(159, 126, 126, 0.8);
 }
 
 .registration-section {
@@ -198,10 +198,11 @@ nav button:hover {
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.5); /* Dark transparent background */
+  background-color: rgba(0, 0, 0, 0.5); 
   padding: 20px;
   width: 100%;
   height: 100%;
+  
 }
 
 .sub-title {
@@ -367,4 +368,11 @@ nav button:hover {
 
 .logo img {
   max-width: 100px;
+}
+.slider img {
+  height: 300px;
+  width: 100%;
+  width: 1300px; 
+   /* Ensures the image fills the width of the container */
+  /* object-fit: cover;  */
 }
